--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shopcart</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./imgs/Logo.png">
-</head>
-<body>
-    <nav>
-        <div class="logo">
-            <img src="./imgs/shopcart.png" >
-        </div>
-        
-        <div><a href="#">Sign In</a></div>
-    </nav>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>e-shopping-website-redesign</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="icon" href="assets/images/favicon_io/favicon.ico" />
+  </head>
+  <body>
+    
+  </body>
 </html>
