--- a/index.html
+++ b/index.html
@@ -5,10 +5,109 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-shopping-website-redesign</title>
+    <!-- =================== Bootstrap css ================= -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <!-- ==================== FONT ==================== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Almarai&display=swap"
+      rel="stylesheet"
+    />
+    <!-- ================== Main CSS ================== -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- ================== ICON ====================== -->
     <link rel="icon" href="assets/images/favicon_io/favicon.ico" />
   </head>
   <body>
-    
+    <!-- ==================== SEARCH =================== -->
+    <section class="search" id="search">
+      <div class="container pt-5">
+        <div class="search__bar" id="search-bar">
+          <form>
+            <input
+              type="search"
+              name="search_bar"
+              id="search--bar"
+              placeholder="Search"
+            />
+          </form>
+          <svg
+            width="30"
+            height="30"
+            viewBox="0 0 42 30"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M25.5073 7.2H1.8C0.805887 7.2 0 6.39411 0 5.4C0 4.40589 0.805887 3.6 1.8 3.6H25.5073C26.2486 1.50265 28.2488 0 30.6 0C32.9512 0 34.9514 1.50265 35.6927 3.6H40.2C41.1941 3.6 42 4.40589 42 5.4C42 6.39411 41.1941 7.2 40.2 7.2H35.6927C34.9514 9.29735 32.9512 10.8 30.6 10.8C28.2488 10.8 26.2486 9.29735 25.5073 7.2Z"
+              fill="#6A6A6A"
+            />
+            <path
+              d="M40.2 26.4C41.1941 26.4 42 25.5941 42 24.6C42 23.6059 41.1941 22.8 40.2 22.8H16.4927C15.7514 20.7027 13.7512 19.2 11.4 19.2C9.04881 19.2 7.04858 20.7027 6.30727 22.8H1.8C0.805888 22.8 0 23.6059 0 24.6C0 25.5941 0.805888 26.4 1.8 26.4H6.30727C7.04858 28.4973 9.04881 30 11.4 30C13.7512 30 15.7514 28.4973 16.4927 26.4H40.2Z"
+              fill="#6A6A6A"
+            />
+          </svg>
+        </div>
+      </div>
+    </section>
+    <!-- ===================== MAIN ===================== -->
+    <main class="main" id="main">
+      <!-- ===================== CATEGORIES ====================== -->
+      <section class="categories mt-2" id="categories">
+        <div class="container">
+          <div class="content__categories">
+            <div class="row flex-nowrap">
+              <div class="links row flex-nowrap">
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Best Selling</a>
+                </div>
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Fasion</a>
+                </div>
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Electronics</a>
+                </div>
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Books</a>
+                </div>
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Toys</a>
+                </div>
+                <div
+                  class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
+                >
+                  <a href="#">Medicine</a>
+                </div>
+              </div>
+              <div class="more"><a href="#">more</a></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!-- ====================== BOOTSTRAP JS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <!-- ==================== MAIN JS ================== -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
