--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>e-shopping-website-redesign</title>
     <!-- =================== Bootstrap css ================= -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css.map">
     <!-- ==================== FONT ==================== -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -63,7 +59,7 @@
         <div class="container">
           <div class="content__categories">
             <div class="row flex-nowrap">
-              <div class="links row flex-nowrap">
+              <div class="links row flex-nowrap" id="nav-links">
                 <div
                   class="col-lg-2 p-2 rounded-pill me-2 text-center nav_link"
                 >
@@ -95,18 +91,15 @@
                   <a href="#">Medicine</a>
                 </div>
               </div>
-              <div class="more"><a href="#">more</a></div>
+              <div class="more"><a href="#" id="nav-scroll">more</a></div>
             </div>
           </div>
         </div>
       </section>
     </main>
     <!-- ====================== BOOTSTRAP JS-->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js.map"></script>
     <!-- ==================== MAIN JS ================== -->
     <script src="assets/js/main.js"></script>
   </body>
